# SyntonicDentiforms

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  file_id.diz  readme.txt
.github/workflows/: build.yml  deploy.yml
data/: scene1.txt  scene2.txt  scene3.txt  scene4.txt  scene5.txt  scene6.txt
data/anim/: Anim0.danim  Anim1.danim  Anim2.danim  Anim3.danim  Anim4.danim  Anim5.danim  Anim6.danim  Synch.danim
data/anim/6/: Axes.danim  TeethA.danim  TeethB.danim  TeethC.danim  TeethD.danim
data/fx/: _defines.fx  _lib.fx  _shared.fx  billboards.fx  billboardsNoDestA.fx  caster.fx  compositeAdd.fx  compositeAlpha.fx  filterBloom.fx  filterToon.fx  lines.fx  noshadowHi.fx  overlay.fx  overlay2.fx  receiver-ps11path.fx  receiver-ps14path.fx  receiverHi.fx  receiverLo.fx  recvall-ps11path.fx  recvall-ps14path.fx  recvallHi.fx  recvallLo.fx  reflective.fx
data/mesh/: Box.dmesh  Cube.dmesh  CubeNX.dmesh  CubeNY.dmesh  CubeNZ.dmesh  CubePX.dmesh  CubePY.dmesh  CubePZ.dmesh
data/mesh/scene1/: GearA.dmesh  GearAAxis.dmesh  GearB.dmesh  GearBCAxis.dmesh  GearC.dmesh
data/mesh/scene2/: Axis.dmesh  GearA.dmesh  GearB.dmesh  GearC.dmesh  Inner.dmesh  InnerEnd.dmesh  Outer.dmesh
data/mesh/scene3/: Axis.dmesh  AxisC.dmesh  AxisD.dmesh  GearA.dmesh  GearB.dmesh  GearC.dmesh  GearD.dmesh  HolderA.dmesh  HolderB.dmesh  Prop.dmesh
data/mesh/scene4/: AxisV1.dmesh  CenterA.dmesh  CenterCyl.dmesh  Cyl.dmesh  GearA.dmesh  GearTop.dmesh
data/mesh/scene5/: CylB.dmesh  CylC.dmesh  GearA.dmesh  GearB.dmesh  Tri.dmesh  TubeA.dmesh
data/mesh/scene6/: Axis1.dmesh  Axis2.dmesh  Gear1.dmesh  Gear2.dmesh  Tooth1.dmesh  Tooth2.dmesh
data/tex/: BondigoDuo.dds  DentATrepasa.dds  DentBPokero.dds  DentCCorenjo.dds  DentDSmogenias.dds  DentEChanChan.dds  DentFPerto.dds  DentGZetal.dds  DentHLaVina.dds  DentICarina.dds  Greetings.dds
dingus/: dingus.dsp  dingus.dsw
dingus/dingus/: stdafx.cpp  stdafx.h
dingus/dingus/animator/: AnimChannel.h  AnimContext.h  AnimCurve.h  AnimImmediateMixer.h  AnimListener.h  AnimStream.h  AnimStreamMixer.h  AnimTime.h  AnimType.cpp  Animation.h  AnimationBunch.cpp  AnimationBunch.h  SampledAnimation.h  TimedStream.h
dingus/dingus/console/: Console.cpp  Console.h  D3DConsoleRenderingContext.cpp  D3DConsoleRenderingContext.h  FileConsoleRenderingContext.cpp  FileConsoleRenderingContext.h  W32StdConsoleRenderingContext.cpp  W32StdConsoleRenderingContext.h  WDebugConsoleRenderingContext.cpp  WDebugConsoleRenderingContext.h
dingus/dingus/dxutils/: D3DApplication.cpp  D3DApplication.h  D3DEnumeration.cpp  D3DEnumeration.h  D3DFont.cpp  D3DFont.h  D3DSettings.cpp  D3DSettings.h  D3Dutil.cpp  D3Dutil.h  DXUtil.cpp  DXUtil.h  DXUtils.rc  resource.h
dingus/dingus/gfx/: Mesh.cpp  Mesh.h  RenderableBillboards.cpp  RenderableBillboards.h  RenderableOrderedBillboards.cpp  RenderableOrderedBillboards.h  Texture.cpp  Texture.h  VertexFormat.cpp  VertexFormat.h  Vertices.h
dingus/dingus/kernel/: D3DDevice.cpp  D3DDevice.h  Proxies.h  ProxyEffect.cpp  ProxyEffect.h  SystemClock.cpp  SystemClock.h
dingus/dingus/math/: AABox.h  Angle.h  MathUtils.h  Matrix4x4.h  Plane.h  Primitives.h  Quaternion.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h  TypeTraits.h  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
dingus/dingus/renderer/: EffectParams.cpp  EffectParams.h  EffectParamsNotifier.cpp  EffectParamsNotifier.h  EffectStateManager.cpp  EffectStateManager.h  RenderCamera.cpp  RenderCamera.h  RenderContext.cpp  RenderContext.h  RenderStats.cpp  RenderStats.h  Renderable.cpp  Renderable.h  RenderableBuffer.cpp  RenderableBuffer.h  RenderableMesh.cpp  RenderableMesh.h
dingus/dingus/resource/: AnimationBundle.cpp  AnimationBundle.h  BundleSingleton.h  CubeTextureBundle.cpp  CubeTextureBundle.h  DeviceResource.h  EffectBundle.cpp  EffectBundle.h  EffectInitListeners.cpp  EffectInitListeners.h  IndexBufferBundle.cpp  IndexBufferBundle.h  IndexBufferFillers.h  (+24 more)
src/: webshell.html
src/animator/: AnimCurve.h  AnimType.cpp  AnimType.h  AnimTypeTraits.h  Animation.cpp  Animation.h  AnimationBunch.cpp  AnimationBunch.h  SampledAnimation.h
src/demo/: Anim.cpp  Anim.h  Billboards.cpp  Billboards.h  Camera.cpp  Camera.h  DataFiles.cpp  DataFiles.h  Demo.cpp  Demo.h  DemoResources.h  DynamicVB.cpp  DynamicVB.h  Effect.cpp  Effect.h  Entity.cpp  Entity.h  ExternalsImpl.cpp  Glare.cpp  Globals.h  LineRenderer.cpp  LineRenderer.h  MeshEntity.cpp  MeshEntity.h  MusicPlayer.cpp  MusicPlayer.h  Pipelines.cpp  Pipelines.h  RenderCamera.cpp  RenderCamera.h  Rendering.cpp  Rendering.h  Scene.cpp  Scene.h  SceneData.h  SceneOut.cpp  SceneOut.h  SceneTeeth.cpp  SceneTeeth.h  TextureProjector.cpp  (+2 more)
src/fx/: _lib.fx  blit.glsl  caster.glsl  compositeAdd.glsl  compositeAlpha.glsl  filterBloom.glsl  filterToon.glsl  lib_lighting.glsl  lib_post.glsl  lines.glsl  noshadowHi.glsl  overlay.glsl  postBlurStep.glsl  postComposeBloom.glsl  postComposeToon.glsl  postToon.glsl  receiverHi.glsl  renderLit.glsl  renderLitShadowed.glsl  renderReflective.glsl  renderWhite.glsl  shadowCaster.glsl
src/gfx/: DynamicVBManager.cpp  Mesh.cpp  Mesh.h  RenderableOrderedBillboards.cpp  RenderableOrderedBillboards.h  Texture.cpp  Texture.h  VertexFormat.cpp  VertexFormat.h  Vertices.h
src/math/: AABox.h  Constants.h  FPU.h  Interpolation.h  Line3.h  MathUtils.h  Maths.cpp  Maths.h  Matrix4x4.h  Plane.h  Quaternion.h  TypeTraits.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/resource/: AnimationBundle.cpp  AnimationBundle.h  BundleSingleton.h  MeshBundle.cpp  MeshBundle.h  MeshSerializer.cpp  MeshSerializer.h  ResourceBundle.h  ResourceId.h  StorageResourceBundle.h  TextureBundle.cpp  TextureBundle.h
src/system/: Globals.h  main.cpp
src/util/: LineRenderer.cpp  LineRenderer.h  TextureProjector.cpp  TextureProjector.h
src/utils/: AssertHelper.h  Errors.cpp  Errors.h  MemUtil.h  STLUtils.h  Singleton.h  StringHelper.cpp  StringHelper.h
tools/: readme.txt
tw/: Demo.dsp  Demo.dsw
tw/src/: Demo.rc  resource.h  stdafx.cpp  stdafx.h  todo_pixelshaders.txt
(+91 files in other folders)
